--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </p>
                     </div>
                 </li>
-                <li class="reviews-item col">
+                <li class="reviews-item col col-big">
                     <div class="reviews-text">
                         <h3 class="reviews-header">
                             Яна, проект 120 кв.м.
