--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Метрика</title>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="icon" href="/resources/favicon.png">
+    <link rel="icon" href="../resources/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
