--- a/index.html
+++ b/index.html
@@ -16,19 +16,40 @@
 <body>
     <!-- <div class="module_one"> -->
     
-        <!-- <div class="nav-section">
+        <header class="nav-section">
             <div class="container-nav">
                 <a class="logo-link" href="#">
                     <img class="logo" src="resources/logo.png" alt="логотип метрика">
                 </a>
-                <section class="nav">
-                    <a href="#about us" class="nav__link">О НАС</a>
-                    <a href="#projects" class="nav__link">ПРОЕКТЫ</a>
-                    <a href="#services" class="nav__link">УСЛУГИ</a>
-                    <a href="#information__contacts" class="nav__link last-link">КОНТАКТЫ</a>
-                </section>
+                <nav class="nav__header">
+                    <a href="#about us" class="nav__link_header">О НАС</a>
+                    <a href="#projects" class="nav__link_header">ПРОЕКТЫ</a>
+                    <a href="#services" class="nav__link_header">УСЛУГИ</a>
+                    <a href="#information__contacts" class="nav__link_header">КОНТАКТЫ</a>
+                </nav>
+                <button class="js-burger-btn burger-btn"></button>
             </div>
-        </div> -->
+        </header> 
+        <div class=" js-burger burger ">
+            <div class=" burger__content">
+                <a class="logo-link" href="#">
+                    <img class="burger_logo" src="resources/logo.png" alt="логотип метрика">
+                </a>
+                <nav class="burger-nav">
+                    <a href="#about us" class="burger-nav__link">О НАС</a>
+                    <a href="#projects" class="burger-nav__link">ПРОЕКТЫ</a>
+                    <a href="#services" class="burger-nav__link">УСЛУГИ</a>
+                    <a href="#information__contacts" class="burger-nav__link">КОНТАКТЫ</a>
+                </nav>
+                <div class="js-burger__content">
+                    <h2 class=burger-information__contacts >для связи:</h2>
+                    <div class="burger-information">
+                        <a class="burger-information__container" href="tel:+7 935 895-45-35">+7 935&nbsp; 895-45-35</a>
+                        <a class="burger-information__container" href="mailto:hello@mail.com">hello@mail.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section class="container">
             <h1 class="heading">Современные и стильные интерьеры для комфортной жизни</h1>
             <div class="fons-room">
@@ -114,7 +135,31 @@
                     </li>
                 </ul>
 
-                <button class="services-btn">Заказать услугу</button>
+                <button class="services-btn js-btn">Заказать услугу</button>
+
+                <div class="js-popup popup">
+                    <div class="js-popup__content popup__content">
+                        <div class="popup__box">
+                            <h2 class="popup__title">Заказать услугу</h2>
+                            <p class="popup__pretext">Заполните форму, мы свяжемся с вами в течение суток
+                            </p>
+                            <input
+                                class="input" 
+                                type="Имя"
+                                placeholder="Имя">
+                            <input 
+                                class="input"
+                                type="Электронная почта"
+                                placeholder="Электронная почта">
+                            <input 
+                                class="input" 
+                                type="Номер телефона"
+                                placeholder="Номер телефона">
+                            <button class="popup__send-btn">Отправить</button>
+                        </div>
+                        <div class="js-popup__close-btn popup__close-btn"></div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -250,6 +295,10 @@
         </footer>  
     <!-- </div> -->
 
-   <script src="gallery.js"></script>
+    <script src="burger.js"></script>
+    <script src="popup.js"></script>
+    <script src="gallery.js"></script>
+    
+   
 </body>
 </html>
