--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         
         <section id="about us" class="container">
-            <h2  class="about-us">О НАС </h2>
+            <h2  class="chapter">О НАС </h2>
             
             <p class="info">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат. </p>
 
@@ -67,7 +67,7 @@
 
         <section id="projects" class="container container_tablet">
 
-            <h2 class="projects"> проекты</h2>
+            <h2 class="chapter"> проекты</h2>
             <div class="list">
                 <picture>
                     <source media="(max-width: 767px)" srcset="resources/apartment_one_phone.png">
@@ -167,7 +167,7 @@
         </section>
 
         <section class="container">
-            <h2 class="reviews-tattle">отзывы</h2>
+            <h2 class="chapter">отзывы</h2>
             <ul class="reviews-list row">
                 <li class="reviews-item col">
                     <div class="reviews-text">
@@ -274,7 +274,7 @@
         </section>
 
         <section class="container">
-            <h2 id="information__contacts" class=information__contacts >Контакты</h2>
+            <h2 id="information__contacts" class= "information__contacts" >Контакты</h2>
             <div class="information">
                 <div class="wrapper-trl">
                     <a class="information__container-tel" href="tel:+7 935 895-45-35">+7 935&nbsp; 895-45-35</a>
